--- a/css.css
+++ b/css.css
@@ -1,8 +1,8 @@
 @font-face {
-	font-family: "linja sike";
+	font-family: "sitelen seli kiwen";
 	font-style: normal;
 	font-weight: 400;
-	src: url(https://wyub.github.io/tokipona/linja-sike-5.otf);
+	src: url(https://raw.githubusercontent.com/lipu-linku/nasin-sitelen/main/sitelenselikiwenasuki.ttf);
 }
 
 body {
@@ -44,8 +44,8 @@ p {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	font-family: "linja sike";
-	font-size: 500%;
+	font-family: "sitelen seli kiwen";
+	font-size: 530%;
 }
 .shaded {
 	color: var(--shade-color);
